CruiseControl Release Notes - Latest CVS

BuildLogger
----------------------
* New interface to handle the Log subelements from the CruiseControl config. Implementers have the opportunity to manipulate the CruiseControl build log just before it gets written to disk.

BuildStatus
----------------------
* New SourceControl implementation. Used to trigger a build when another CruiseControl project has a successfuil build. Works by monitoring the log directory for the "target" project. - Patch by Garrick Olson

build.xml (jsp)
----------------------
* will build war w/out jars in WEB-INF/lib if property jdk1.4 is defined.
* removed files from war that shouldn't be included. Patch by Matt Albrecht

ClearCaseBootstrapper
----------------------
* Added ClearCaseBootstrapper to plug-in registry under the name "clearcasebootstrapper". - Patch by Esa Laine

ClearCase Sourcecontrol
----------------------
* Fixed bug with ClearCase version 2002.05.00 that hindered sending email. Patch by Ian Colledge and Esa Laine
* Fixed bug where comments with ~ or # were causing modifications to be lost

CruiseControlTagSupport
----------------------
* minor change for compatibility with jdk 1.3 - Patch by Thai Thanh Ha

DefaultLabelIncrementer
----------------------
* added ability to set a default label - Patch by Garrick Olson

Email Publishers (LinkEmailPublisher and HTMLEmailPublisher)
----------------------
* failure subelements now contain an optional attribute "reportWhenFixed" to specify if the email address should be sent mail when the build is fixed.
* added emailaddressmapper attribute. Patch by Esa Laine

FileSystem Sourcecontrol
----------------------
* Fixed bug where FS was reporting the wrong path for modifications. Patch by Randy Coulman.

FTP support
----------------------
* Added CurrentBuildStatusFTPBootstrapper and CurrentBuildStatusFTPPublisher. Submitted by Matt Albrecht
* Also added an FTPPublisher. (Submitted by Matt Albrecht)

JMX Interface
----------------------