@@ -1016,6 +1016,11 @@
                <td class="tabledata">Yes</td>
                <td class="tabledata">parent directory of actual destination directory; actual destination directory name will be the build timestamp.</td>
             </tr>
+            <tr>
+               <td class="tabledata">subdirectory</td>
+               <td class="tabledata">No</td>
+               <td class="tabledata">subdirectory under the unique (timestamp) directory to contain artifacts</td>
+            </tr>
          </table>
 
          <p><a name="currentbuildstatuspublisher"><span class="small">CurrentBuildStatusPublisher</span><br>
